--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,21 @@
-group 'com.github.brunodles'
-version '1.0.0'
+buildscript {
+    repositories {
+        mavenLocal()
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    }
+}
 
 apply plugin: 'java'
-apply plugin: 'maven'
 
 sourceCompatibility = 1.6
 
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -23,18 +29,19 @@ dependencies {
 }
 
 
+ext.maven = [
+        group   : "com.brunodles",
+        version : '1.2.0',
+        repo    : "TempRepo",
+        name    : "AnnotationProcessorHelper",
+        artifact: "annotationprocessorhelper",
+        site    : "https://github.com/brunodles/AnnotationProcessorHelper",
+        git     : "https://github.com/brunodles/AnnotationProcessorHelper.git",
+        tag     : 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
+]
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
+ext.maven_publish = [
+        artifact: maven.artifact,
+        name    : maven.name
+]
+apply from: rootProject.file('gradle/publish.gradle')
