Update build.gradle to fix dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        mavenLocal()
+        maven { url "https://dl.bintray.com/brunodles/TempRepo/" }
         jcenter()
         mavenCentral()
     }
@@ -23,11 +23,10 @@ dependencies {
 
     testCompile 'org.mockito:mockito-core:2.0.54-beta'
 
-    testCompile 'com.mscharhag.oleaster:oleaster-matcher:0.1.2'
+    testCompile 'org.assertj:assertj-core:3.6.1'
     testCompile 'com.mscharhag.oleaster:oleaster-runner:0.1.2'
-    testCompile 'com.github.brunodles:OleasterSuiteRunner:0.1'
+    testCompile 'com.brunodles:oleaster-suiterunner:0.1.1'
 }
-
 
 ext.maven = [
         group   : "com.brunodles",
