--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+project.ext.kotlin_version = '1.0.6'
+
 buildscript {
     repositories {
         maven { url "https://dl.bintray.com/brunodles/TempRepo/" }
@@ -6,12 +8,15 @@ buildscript {
     }
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.6"
     }
 }
 
 apply plugin: 'java'
+apply plugin: "kotlin"
 
 sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 repositories {
     mavenLocal()
@@ -26,6 +31,9 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.6.1'
     testCompile 'com.mscharhag.oleaster:oleaster-runner:0.1.2'
     testCompile 'com.brunodles:oleaster-suiterunner:0.1.1'
+
+    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
 
 ext.maven = [
