--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
 
+ext.scripter = [
+        'gradle/scripter.gradle': 'https://raw.githubusercontent.com/brunodles/GradleHelpers/master/scripter/scripter.gradle',
+        'gradle/publish.gradle' : 'https://raw.githubusercontent.com/brunodles/GradleHelpers/master/publish/single.gradle'
+]
+apply from: rootProject.file("gradle/scripter.gradle")
+
 ext.maven = [
         group   : "com.brunodles",
         version : '1.3.0',
@@ -44,10 +50,5 @@ ext.maven = [
         site    : "https://github.com/brunodles/AnnotationProcessorHelper",
         git     : "https://github.com/brunodles/AnnotationProcessorHelper.git",
         tag     : 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
-]
-
-ext.maven_publish = [
-        artifact: maven.artifact,
-        name    : maven.name
 ]
 apply from: rootProject.file('gradle/publish.gradle')
