--- a/build.gradle
+++ b/build.gradle
@@ -41,14 +41,26 @@ ext.scripter = [
 ]
 apply from: rootProject.file("gradle/scripter.gradle")
 
-ext.maven = [
+ext.publishing = [
         group   : "com.brunodles",
         version : '1.3.0',
         repo    : "TempRepo",
         name    : "AnnotationProcessorHelper",
         artifact: "annotationprocessorhelper",
         site    : "https://github.com/brunodles/AnnotationProcessorHelper",
+        issueTrackerUrl: "https://github.com/brunodles/AnnotationProcessorHelper/issues",
         git     : "https://github.com/brunodles/AnnotationProcessorHelper.git",
-        tag     : 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
+        tag     : 'git rev-parse --abbrev-ref HEAD'.execute().text.trim(),
+        override       : true,
+        desc           : "A helper to create annotation processors.",
+        license        : [
+                short: "mit",
+                name : "MIT License",
+                url  : "http://www.opensource.org/licenses/mit-license.php"
+        ],
+        developer      : [
+                name : "Bruno de Lima e Silva",
+                email: "dlimaun@gmail.com"
+        ]
 ]
 apply from: rootProject.file('gradle/publish.gradle')
