--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 repositories {
-    maven { url "https://dl.bintray.com/brunodles/releases/" }
+    jcenter()
     mavenCentral()
 }
 
