--- a/build.gradle
+++ b/build.gradle
@@ -41,15 +41,17 @@ ext.scripter = [
 ]
 apply from: rootProject.file("gradle/scripter.gradle")
 
+
+def gitPath = "github.com/brunodles/AnnotationProcessorHelper"
 ext.publishing = [
         group   : "com.brunodles",
         version : '1.3.0',
         repo    : "TempRepo",
         name    : "AnnotationProcessorHelper",
         artifact: "annotationprocessorhelper",
-        site    : "https://github.com/brunodles/AnnotationProcessorHelper",
-        issueTrackerUrl: "https://github.com/brunodles/AnnotationProcessorHelper/issues",
-        git     : "https://github.com/brunodles/AnnotationProcessorHelper.git",
+        gitPath : gitPath,
+        site    : "https://$gitPath",
+        issueTrackerUrl: "https://$gitPath/issues",
         tag     : 'git rev-parse --abbrev-ref HEAD'.execute().text.trim(),
         override       : true,
         desc           : "A helper to create annotation processors.",
